index.css
*, *::after, *::before{
    box-sizing: border-box;
}

html, body {
    margin: 0;
    padding: 0;
    font-family: "Inter", sans-serif;
}

main, header{
    max-width: 650px;   
    margin:0 auto;
}

.hidden{
    display: none;
}

.flex{
    display: flex;
}

.inverse-flex{
    flex-direction: column-reverse !important;
}

/* header */
header{
    background: url("images/movie-background.webp");
    background-position: 0 -200px;
    position: relative;
}



.header-container{
    background-color: #0e0e0e8c;
    color: white;
    height: 208px;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    gap:1em;
    text-align: center;
}

h1{
    
    font-size: 2.625rem;
    margin: 0;
}

a{
    font-size: 0.875rem;
    text-decoration: none;
    color:inherit;
}

a:hover{
    color:#EA8410;
    text-decoration: underline;
}



/* form */

form{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap:0.5em;
    position: absolute;
    bottom: -40px;
    right:0;
    left:0;
}

.search-bar, .search-btn{
    border: 1px solid #D1D5DB;
    font-size: 0.875rem;
    padding: calc(9em/14) 1em calc(9em/14) calc(41em/14);
    border-radius: 6px;
}

.input-container{
    position:relative;
}

.search-bar{
    color:#6B7280;
}

.search-icon{
    position: absolute;
    left: 10px;
    top:8.5px;
}

.search-icon > button{
    background: none;
    border: none;
    cursor: pointer;
}

.search-bar::-webkit-search-cancel-button{
    color: black;
    cursor: pointer;
}

.search-btn{
    padding-right: 2.75em;
    padding-left: 2.75em;
    color: #374151;
    background-color: #F9FAFB;
    cursor: pointer;
}

.search-btn:hover, .search-btn:active,
.search-bar:hover, 
.search-bar:active{
    background-color: #E0E5EB;
}

/* main */

main{
    padding: 5em 2.75em 2.75em;
}

.empty{
    display: flex;
    align-items: center;
    justify-content: center;
    min-height: 571px;
    text-align: center;
    color:#DFDDDD;
    font-size: 1.125rem;
}

.full{
    display: flex;
    flex-direction: column;
    align-items: center;
}

.poster {
    width: 100%;
    height:100%;
    grid-column: span 12;
    border-radius: 6px;
    justify-self: center;
    align-self: self-end;
}

.movie-content{
    grid-column: span 12;
    display: grid;
    grid-template-rows: 1fr auto 1fr;
    /* align-items: center; */
    align-self: center;
}

.movie-container{
    display: grid;
    grid-template-columns: repeat(10, 1fr);
    gap:1.25em;
    border-bottom: 1.5px solid #E5E7EB;
    padding-bottom: 2em;
    margin-bottom: 4em;
    align-items: center;
}

.movie-container span{
    font-size: 0.75rem;
    color:#111827;
}

.movie-header > h3{
    font-size: 1.125rem;
    font-weight: 500;
    margin: 0;
}

.movie-header{
    display: flex;
    align-items: center;
    justify-content: space-around;
    flex-wrap: wrap;
    gap: 0.5em;
    margin-bottom:0.5em;
    text-align:center
}

.rating{
    margin: 0 auto;
}

.movie-details{
    display: grid;
    grid-template-columns: auto 1fr minmax(90px, auto);
    margin-bottom: 0.75em;
    gap:0.25em;
}

.watchlist-btn{
    width: 16px;
    appearance: none;
    border-radius:50%;
    border:none;
    padding-block: 0;
    padding-inline: 0;
    background-color: #111827;
    color:white;
    font-weight: 700;
    font-size: 14px;
    cursor:pointer;
}

.watchlist-btn > a:hover{
    color: #B4B1B1;
    text-decoration: none;
}

.empty-message{
    color: #363636;
    font-size: 0.875rem;
    font-weight: 700;
}

.watchlist-btn:hover{
    background-color: #1A1919;
    color: #B4B1B1;
}

.watchlist-label, .watchlist-btn-container{
    user-select: none;
}

.genre{
    justify-self: center;
    text-align: center;
}

.watchlist-btn-container{
    justify-self: end;
}

.plot, .plot > span{
    font-size: 0.875rem;
    color: #6B7280;
    line-height: 1.5;
    margin: 0;
    /* align-self: center; */
}

.readmore-btn{
    appearance: none;
    border: none;
    background: none;
    color: #272727;
    padding: 0;
    margin:0;
    cursor: pointer;
}


/* loading modal */

.loading-modal{
    align-items: center;
    justify-content: center;
}

/* confirm pop-up */

.message-container{
    margin: 0 auto;
    position: fixed;
    bottom:0;
    left:0;
    right:0;
    text-align: center;
    font-size: 1.125rem;
    animation: pop-up 1.5s;
}

.message-container > span{
    background-color: #064ab8;
    color: white;
    padding: 0.75em 1em;
    border-radius: 10px;
}

@keyframes pop-up{
    0%{
        transform: translateY(160%);
        opacity: 1;
    }
    50%{
        transform: translateY(-150%);
        opacity: 1;
    }
    100%{
        transform: translateY(-150%);
        opacity: 0;
    }

}

@media (min-width:425px){
    .poster{
        width:60%;
    }
}


@media (min-width:550px){
    .header-container{
        display: flex;
        flex-direction: row;
        align-items: center;
        justify-content: space-evenly;
    }

    .search-bar{
        border-radius: 6px 0 0 6px;
    }
    .search-btn{
        border-radius: 0 6px 6px 0;
    }

    form{
        flex-direction: row;
        gap:0;
        bottom: -18px;
        right:0;
        left:0;
    }

    main{
        padding:3.875em 2.75em 2.75em;
    }
    

    .movie-content{
        grid-template-rows: 1fr auto 2fr;
        align-items: center;
        grid-column: 4/-1;
    }
    .poster{
        grid-column: span 3;
        /* height:147px; */
        width: 100%;
        align-self: center;
    }
    .plot{
        align-self: self-start;
    }

    .movie-container{
        padding-bottom: 1.5em;
        margin-bottom: 1.5em;
        grid-auto-rows: minmax(147px, auto);
    }
}


/* padding: 5.125em 2.75em 4.875em; */

